# video-to-ascii

./: README.md  pyproject.toml  requirements.txt
video_to_ascii/render_strategy/: ascii_strategy.py
