[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-to-ascii"
version = "1.3.1"
description = "It is a simple python package to play videos in the terminal"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Joel Ibaceta", email = "mail@joelibaceta.com"}
]
maintainers = [
    {name = "Joel Ibaceta", email = "mail@joelibaceta.com"}
]
keywords = ["video", "ascii", "terminal", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.5.0",
    "xtermcolor>=1.2",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
audio = ["pyaudio>=0.2.11"]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]
all = ["video-to-ascii[audio]"]

[project.urls]
Homepage = "https://github.com/joelibaceta/video-to-ascii"
Repository = "https://github.com/joelibaceta/video-to-ascii"
Issues = "https://github.com/joelibaceta/video-to-ascii/issues"
Documentation = "https://github.com/joelibaceta/video-to-ascii#readme"

[project.scripts]
video-to-ascii = "video_to_ascii.cli:main"

[tool.setuptools.packages.find]
include = ["video_to_ascii*"]

[tool.setuptools.package-data]
video_to_ascii = ["**/*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true